// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncludeContainer should not render include for a Canonical page with toggles disabled 1`] = `<div />`;

exports[`IncludeContainer should not render include for an Amp page with toggles disabled 1`] = `<div />`;

exports[`IncludeContainer should render a VJ include on an Amp page with toggles enabled 1`] = `
<div>
  VJ-Amp-component
</div>
`;

exports[`IncludeContainer should render a fallback for VJs on an Amp page when classified as not supported 1`] = `
<div>
  <div
    class="StyledEmbedError-sc-1oc1egd-0 kRErCH"
  >
    <div
      class="StyledErrorMessage-sc-1oc1egd-1 eCvEfh"
    >
      <strong>
        Sorry, we can’t display this part of the story on this lightweight mobile page.
      </strong>
      <a
        href="https://www.bbc.co.uk/"
      >
        View the full version of the page to see all the content.
      </a>
    </div>
  </div>
</div>
`;

exports[`IncludeContainer should render a fallback for VJs on an Amp page when showEmbed is present 1`] = `
<div>
  <div
    class="StyledEmbedError-sc-1oc1egd-0 kRErCH"
  >
    <div
      class="StyledErrorMessage-sc-1oc1egd-1 eCvEfh"
    >
      <strong>
        Sorry, we can’t display this part of the story on this lightweight mobile page.
      </strong>
      <a
        href="https://www.bbc.co.uk/"
      >
        View the full version of the page to see all the content.
      </a>
    </div>
  </div>
</div>
`;

exports[`IncludeContainer should render include for IDT2 on an Amp page with toggles enabled 1`] = `
<div>
  IDT2-Amp-component
</div>
`;

exports[`IncludeContainer should render include for a Canonical page with toggles enabled 1`] = `
<div>
  canonical-includes-component
</div>
`;
